Make deployment portable across Kubernetes and OpenShift